--- a/swe-portfolio/app/globals.css
+++ b/swe-portfolio/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 html {
-    @apply scroll-smooth;
+    @apply scroll-smooth overflow-x-hidden;
 }
 
 body {
@@ -43,11 +43,11 @@ body {
 }
 
 .nav-bar {
-    @apply w-full mb-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] px-[clamp(1rem,4vw,1.5rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-center justify-between sticky top-0 z-50;
+    @apply w-full mb-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.2)] px-[clamp(1rem,4vw,1.5rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-center justify-between fixed top-0 z-50;
 }
 
 .nav-bar-vertical{
-    @apply absolute gap-2 h-screen ml-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] px-[clamp(1rem,4vw,1.5rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-start flex-col top-0 bottom-0 right-0 z-51;
+    @apply fixed gap-2 transform h-screen ml-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] pl-[4] pr-[clamp(0.5rem,4vw,1rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-start flex-col top-0 bottom-0 right-0 z-51;
 }
 
 .nav-container {
@@ -370,4 +370,12 @@ body {
 }
 .hamburger-button:hover{
     @apply bg-[rgba(83,134,228,0.4)] overflow-visible;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.4s ease-in-out;
 }
