--- a/swe-portfolio/app/globals.css
+++ b/swe-portfolio/app/globals.css
@@ -1,30 +1,24 @@
 @import "tailwindcss";
-/*
-.home-nav-button {
-  @apply my-auto mr-auto text-3xl cursor-pointer hover:text-[#d0d2ec] font-bold text-[#f9f5ff] transition-all duration-300
-}
-.default-nav-button {
-  @apply mx-0.5 px-3 rounded-3xl cursor-pointer bg-[#0a0a0a] text-[#f9f5ff] transition-all duration-250
-}
-.default-nav-button:hover {
-  @apply text-[#d0d2ec] bg-[#05299e75]
-}
 
-.default-footer-text {
-  @apply mx-8 text-sm text-[#f9f5ff]
-}
-*/
 /* Base Styles */
 * {
     @apply box-border;
 }
 
 html {
-    @apply scroll-smooth overflow-x-hidden;
+    @apply scroll-smooth overflow-x-hidden overflow-y-scroll;
 }
 
 body {
     @apply font-sans m-0 p-0;
+    -ms-overflow-style: none; /* IE/Edge legacy */
+    scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
 }
 
 /* Navigation Classes */
@@ -36,22 +30,29 @@ body {
 }
 
 .default-nav-button {
-    @apply mx-0.5 my-0 px-[clamp(0.5rem,2vw,0.75rem)] py-2 rounded-full cursor-pointer bg-[rgba(10,10,10,0.8)] backdrop-blur text-[#d0d2ec] transition-all duration-300 text-[clamp(0.75rem,2vw,0.875rem)] border border-[rgba(83,134,228,0.1)];
+    @apply mx-0 my-0 px-[clamp(0.5rem,2vw,0.75rem)] py-2 rounded-full cursor-pointer bg-[rgba(10,10,10,0.8)] backdrop-blur text-[#d0d2ec] transition-all duration-300 text-[clamp(0.75rem,2vw,0.875rem)] border  border-[rgba(83,134,228,0)];
 }
 .default-nav-button:hover {
-    @apply text-[#f9f5ff] bg-[rgba(83,134,228,0.15)] border-[rgba(83,134,228,0.3)];
+    @apply text-[#f9f5ff] bg-[rgba(83,134,228,0.15)];
+}
+.default-nav-button-active{
+    @apply border-[#8ba3f0];
 }
 
 .nav-bar {
-    @apply w-full mb-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.2)] px-[clamp(1rem,4vw,1.5rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-center justify-between fixed top-0 z-50;
+    @apply w-full mb-5 ml-auto bg-[rgba(10,10,10,0)] border-[rgba(83,134,228,0.2)] px-[clamp(1rem,4vw,1.5rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-center justify-between fixed top-0 z-50 transition-all duration-300 ease-in-out;
 }
 
 .nav-bar-vertical{
     @apply fixed gap-2 transform h-screen ml-5 bg-[rgba(10,10,10,0.85)] backdrop-blur border-b border-[rgba(83,134,228,0.1)] pl-[4] pr-[clamp(0.5rem,4vw,1rem)] py-[clamp(0.15rem,2vw,0.5rem)] flex items-start flex-col top-0 bottom-0 right-0 z-51;
 }
 
+.nav-button-container{
+    @apply border-[rgba(83,134,228,0.1)] bg-[rgba(10,10,10,0.8)] backdrop-blur border rounded-full transition-all duration-300 ease-in-out;
+}
+
 .nav-container {
-    @apply max-w-[min(90vw,72rem)] mx-auto flex items-center justify-between w-full;
+    @apply max-w-[min(90vw,72rem)] mx-auto flex items-center justify-between w-full transition-all duration-300 ease-in-out;
 }
 
 /* Typography Classes */
@@ -326,11 +327,11 @@ body {
 }
 
 .dt-profile-container{
-    @apply flex;
+    @apply flex bg-[rgba(10,10,10,0.85)] bg-linear-0  border-[rgba(83,134,228,0.2)] border w-min;
 }
 
 .dt-profile-info{
-    @apply flex flex-col ml-4 mt-2 transition-all duration-300 overflow-hidden;
+    @apply flex flex-col ml-4 mt-2 transition-all duration-300;
 }
 
 .m-profile-container{
@@ -338,7 +339,7 @@ body {
 }
 
 .m-profile-info{
-    @apply flex flex-col ml-4 mt-2;
+    @apply flex flex-col mx-2 my-auto;
 }
 
 .profile-image {
