--- a/swe-portfolio/app/globals.css
+++ b/swe-portfolio/app/globals.css
@@ -30,7 +30,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .default-nav-button {
-    @apply mx-0 my-0 px-[clamp(0.5rem,2vw,0.75rem)] py-2 rounded-full cursor-pointer bg-[rgba(10,10,10,0)] text-[#d0d2ec] transition-all duration-300 text-[clamp(0.75rem,2vw,0.875rem)] border  border-[rgba(83,134,228,0)];
+    @apply mx-0 my-0 px-[clamp(0.5rem,2vw,0.8rem)] py-[clamp(0.25rem,2vh,0.5rem)] rounded-full cursor-pointer bg-[rgba(10,10,10,0)] text-[#d0d2ec] transition-all duration-300 text-[clamp(0.9rem,2vw,1rem)] border  border-[rgba(83,134,228,0)];
 }
 .default-nav-button:hover {
     @apply text-[#f9f5ff] bg-[rgba(83,134,228,0.15)];
@@ -48,7 +48,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .nav-button-container{
-    @apply border-[rgba(83,134,228,0.2)] bg-[rgba(10,10,10,0.8)] backdrop-blur border rounded-full transition-all duration-300 ease-in-out;
+    @apply border-[rgba(83,134,228,0.1)] bg-[rgba(10,10,10,0.8)] backdrop-blur border rounded-full transition-all duration-300 ease-in-out;
 }
 
 .nav-container {
