image border color change

--- a/app/globals.css
+++ b/app/globals.css
@@ -191,7 +191,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 }
 
 .hero-image {
-    @apply rounded-2xl border-2 w-fit h-[clamp(75vh,75vh,90vh)] border-gray-100 object-cover;
+    @apply rounded-2xl border-2 w-fit h-[clamp(75vh,75vh,90vh)] border-blue-400 object-cover;
 }
 
 .social-button-text {
