--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@ body {
 }
 
 h1,h2,h3 { 
-    font-family: var(--font-heading), var(--font-primary); 
+    font-family: var(--font-primary),var(--font-heading); 
 }
 
 html::-webkit-scrollbar, body::-webkit-scrollbar {
