--- a/app/globals.css
+++ b/app/globals.css
@@ -588,6 +588,15 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 }
 
+.position-container {
+    @apply w-full ml-2 mt-6 mb-4 p-4 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-[rgba(83,134,228,0.2)] rounded-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out;
+}
+
+.position-container:hover {
+    @apply border-blue-400 shadow-lg scale-99 shadow-white/15;
+}
+
+
 
 @keyframes scrollSkills {
   from {
