Updating site layout and experience section styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -588,15 +588,36 @@ html::-webkit-scrollbar, body::-webkit-scrollbar {
 
 }
 
-.position-container {
-    @apply w-full ml-2 mt-6 mb-4 p-4 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-[rgba(83,134,228,0.2)] rounded-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out;
+.timeline-container {
+    @apply flex flex-col w-fit h-full mt-5 justify-between;
 }
 
-.position-container:hover {
+.position-timeline-container {
+    @apply flex flex-row my-0 py-0 h-full w-fit;
+}
+.position-card {
+    @apply w-full ml-2 mt-8 p-4 bg-gradient-to-br from-[rgba(15,15,20,0.4)] via-[rgba(10,10,10,0.8)] to-[rgba(5,41,158,0.05)] border border-[rgba(83,134,228,0.2)] rounded-[clamp(0.75rem,2vw,1rem)]  transition-all duration-300 ease-in-out;
+}
+
+.position-card:hover {
     @apply border-blue-400 shadow-lg scale-99 shadow-white/15;
 }
 
+.position-card-title {
+    @apply text-[clamp(1.25rem,1.5rem,1.5rem)] font-semibold mb-2;
+}
 
+.position-card-org-title {
+    @apply ml-2 mt-2 mb-1 text-[clamp(0.70rem,0.9rem,0.9rem)] font-medium text-blue-300;
+}
+
+.position-card-bullet-list {
+    @apply flex flex-col ml-4 mt-3 gap-1 text-[clamp(0.70rem,0.9rem,0.9rem)]/5 font-light text-gray-400;
+}
+
+.position-card-bullet {
+    @apply mb-1;
+}
 
 @keyframes scrollSkills {
   from {
